--- a/Neural-Dot-Net.csproj
+++ b/Neural-Dot-Net.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NeuralNetwork\MultiLayerPerceptron.cs" />
+    <Compile Include="NeuralNetwork\Perceptron.cs" />
     <Compile Include="NeuralNetwork\Synapse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
